# cucumber-cpp-containerized

./: CMakeLists.txt  Dockerfile  Dockerfile.windows-choco  Dockerfile.windows-conan  Dockerfile.windows-vcpkg  README.md  conanfile.txt  start.sh
.devcontainer/: devcontainer.json
features/: addition.feature
features/step_definitions/: CalculatorSteps.cpp
src/: Calculator.cpp  Calculator.h
